tests/mutating-webhook/dse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cluster1-dc1 
  name: cluster1-dc1-ingress
spec:
  rules:
  - host: myingress.com
    http:
      paths:
      - backend:
          serviceName: cluster1-dc1-service
          servicePort: 9042 
        path: /
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - myingress.com
    secretName: myingress-cert # < cert-manager will store the created certificate in this secret.
